Fixed overflow on professor assignments

--- a/frontend/src/main/frontend/src/components/styles/TeacherAss.css
+++ b/frontend/src/main/frontend/src/components/styles/TeacherAss.css
@@ -54,7 +54,7 @@
     flex-grow: 1;
 }
 
-#assList {
+#teacherAssList {
     width: 100%;
 }
 
